--- a/terrazzo/src/terminal.scss
+++ b/terrazzo/src/terminal.scss
@@ -120,6 +120,10 @@
 
         &>ul {
             height: 100%;
+
+            &>li {
+                height: 100%;
+            }
         }
     }
 
