Show client names

--- a/terminal/src/terminal.scss
+++ b/terminal/src/terminal.scss
@@ -81,6 +81,7 @@
     }
 
     .add-tab-icon {
+        position: relative;
         display: inline flex;
         flex-direction: column;
         align-items: flex-end;
