--- a/terminal/src/terminal/terminal_tabs.scss
+++ b/terminal/src/terminal/terminal_tabs.scss
@@ -1,4 +1,40 @@
-ul.add_client_tab {
+.add-tab-icon {
+    position: relative;
+    display: inline flex;
+    flex-direction: column;
+    align-items: flex-end;
+    align-self: center;
+    flex-grow: 1;
+
+    border: 0;
+    margin: 0px;
+    padding: 0px;
+
+    div {
+        padding: 3px;
+        margin-right: 2px;
+
+        img {
+            display: block;
+            height: 15px;
+            border: 0;
+            margin: 0px;
+            padding: 0px;
+            filter: invert(1);
+        }
+
+        &.active {
+            img {
+                filter: invert(0);
+            }
+
+            background-color: var(--link-color);
+            cursor: pointer;
+        }
+    }
+}
+
+ul.add-client-tab {
     position: absolute;
     right: 0;
     top: 25px;
