--- a/terminal/src/frontend/login.scss
+++ b/terminal/src/frontend/login.scss
@@ -1,5 +1,7 @@
 div.login {
     display: flex;
+    flex-direction: row;
+
     justify-content: center;
     align-items: center;
     width: 100%;
