--- a/terminal/src/terminal/terminal_tabs.scss
+++ b/terminal/src/terminal/terminal_tabs.scss
@@ -1,10 +1,9 @@
-.add-tab-icon {
+.add-tab-icon,
+.menu-icon {
     position: relative;
     display: inline flex;
     flex-direction: column;
-    align-items: flex-end;
     align-self: center;
-    flex-grow: 1;
 
     border: 0;
     margin: 0px;
@@ -12,7 +11,6 @@
 
     div {
         padding: 3px;
-        margin-right: 2px;
 
         img {
             display: block;
@@ -22,6 +20,33 @@
             padding: 0px;
             filter: invert(1);
         }
+    }
+}
+
+.menu-icon {
+    align-items: flex-start;
+    flex-grow: 0;
+
+    div {
+        margin-left: 2px;
+
+        &:hover {
+            img {
+                filter: invert(0);
+            }
+
+            background-color: var(--link-color);
+            cursor: pointer;
+        }
+    }
+}
+
+.add-tab-icon {
+    align-items: flex-end;
+    flex-grow: 1;
+
+    div {
+        margin-right: 2px;
 
         &.active {
             img {
@@ -32,6 +57,7 @@
             cursor: pointer;
         }
     }
+
 }
 
 ul.add-client-tab {
