--- a/terminal/src/_common.scss
+++ b/terminal/src/_common.scss
@@ -20,6 +20,7 @@ body {
     --color: green;
     --link-color: green;
     --background-color: black;
+    --padding: 5px;
     background-color: var(--background-color);
 }
 
