--- a/terminal/src/frontend/login.scss
+++ b/terminal/src/frontend/login.scss
@@ -13,3 +13,13 @@ div.login {
         border: 1px solid var(--color);
     }
 }
+
+img.key-icon {
+    display: block;
+    height: 15px;
+    border: 0;
+    margin: 0px;
+    margin-right: var(--padding);
+    padding: 0px;
+    filter: invert(1);
+}
