--- a/terminal/src/terminal/terminal_tabs.scss
+++ b/terminal/src/terminal/terminal_tabs.scss
@@ -15,12 +15,7 @@
         margin-right: 2px;
 
         img {
-            display: block;
-            height: 15px;
-            border: 0;
-            margin: 0px;
-            padding: 0px;
-            filter: invert(1);
+            @include trz-icon;
         }
 
         &.active {
