--- a/terminal/src/frontend/menu.scss
+++ b/terminal/src/frontend/menu.scss
@@ -10,6 +10,8 @@ div.menu {
     margin: 0px;
     padding: 0px;
 
+    --padding: 5px;
+
     div.menu-inner {
         padding: 3px;
         margin-left: 2px;
