--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -2,19 +2,17 @@ div.text_editor {
     width: 100%;
     height: 100%;
     @include nowrap;
+    display: flex;
+    flex-direction: column;
 }
 
 div.header {
-    position: relative;
     height: 30px;
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 30px;
-
-    overflow-x: scroll;
-    overflow-y: hidden;
-    @include no-scroll-bar;
+    border: 1px solid var(--color);
 }
 
 div.body {
@@ -22,10 +20,8 @@ div.body {
 }
 
 div.path-selector {
-    position: relative;
     display: flex;
     flex-direction: row;
-    align-items: center;
     width: 100%;
 
     >img.icon {
@@ -34,11 +30,18 @@ div.path-selector {
         margin-right: var(--padding);
     }
 
-    input.selector {
-        background-color: var(--background-color);
-        color: var(--color);
-        border: 0;
+    div.selector {
+        position: relative;
+        display: flex;
+        flex-direction: row;
         width: 100%;
+
+        input.selector {
+            background-color: var(--background-color);
+            color: var(--color);
+            border: 0;
+            width: 100%;
+        }
     }
 }
 
