--- a/terminal/src/frontend/menu.scss
+++ b/terminal/src/frontend/menu.scss
@@ -1,25 +1,27 @@
-.add-tab-icon {
+div.menu {
     position: relative;
     display: inline flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     align-self: center;
-    flex-grow: 1;
+    flex-grow: 0;
 
     border: 0;
     margin: 0px;
     padding: 0px;
 
-    div {
-        padding: 3px;
-        margin-right: 2px;
+    --padding: 5px;
 
-        img {
+    div.menu-inner {
+        padding: 3px;
+        margin-left: 2px;
+
+        img.menu-icon {
             @include trz-icon;
         }
 
-        &.active {
-            img {
+        &:hover {
+            img.menu-icon {
                 filter: invert(0);
             }
 
@@ -29,9 +31,9 @@
     }
 }
 
-ul.add-client-tab {
+ul.menu-items {
     position: absolute;
-    right: 0;
+    left: 0;
     top: 25px;
 
     list-style: none;
@@ -41,13 +43,31 @@ ul.add-client-tab {
     border: 1px solid white;
     background-color: var(--background-color);
 
-    li {
+    >li {
+        display: flex;
+        flex-direction: row;
+
         &:hover {
             background-color: var(--link-color);
             cursor: pointer;
         }
 
         padding: var(--padding);
-        margin: 1px;
+        margin: 0px;
+
+        @include nowrap;
+
+        img.app-icon {
+            @include trz-icon;
+            margin-right: var(--padding);
+        }
+    }
+}
+
+ul.menu-items:not(:hover) {
+    >li {
+        &.active {
+            background-color: var(--link-color);
+        }
     }
 }
