--- a/terminal/src/_common.scss
+++ b/terminal/src/_common.scss
@@ -72,3 +72,31 @@ body {
 #main {
     height: 100%;
 }
+
+@mixin trz-menu {
+    position: absolute;
+    left: 0;
+    top: 25px;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: var(--background-color);
+
+    z-index: 1000;
+
+    >li {
+        display: flex;
+        flex-direction: row;
+
+        &:hover {
+            background-color: var(--link-color);
+            cursor: pointer;
+        }
+
+        padding: var(--padding);
+        margin: 0px;
+
+        @include nowrap;
+    }
+}
