--- a/terminal/src/frontend/menu.scss
+++ b/terminal/src/frontend/menu.scss
@@ -32,31 +32,11 @@ div.menu {
 }
 
 ul.menu-items {
-    position: absolute;
-    left: 0;
-    top: 25px;
-
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    @include trz-menu;
 
     border: 1px solid white;
-    background-color: var(--background-color);
 
     >li {
-        display: flex;
-        flex-direction: row;
-
-        &:hover {
-            background-color: var(--link-color);
-            cursor: pointer;
-        }
-
-        padding: var(--padding);
-        margin: 0px;
-
-        @include nowrap;
-
         img.app-icon {
             @include trz-icon;
             margin-right: var(--padding);
