--- a/terminal/src/text_editor/text_editor_ui.scss
+++ b/terminal/src/text_editor/text_editor_ui.scss
@@ -46,27 +46,7 @@ div.path-selector {
 }
 
 ul.autocomplete {
-    position: absolute;
-    left: 0;
-    top: 25px;
-
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
+    @include trz-menu;
     border-left: 1px dotted gray;
     border-bottom: 1px dotted gray;
-    background-color: var(--background-color);
-
-    >li {
-        &:hover {
-            background-color: var(--link-color);
-            cursor: pointer;
-        }
-
-        padding: var(--padding);
-        margin: 0px;
-
-        @include nowrap;
-    }
 }
