--- a/terminal/src/_common.scss
+++ b/terminal/src/_common.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    border: 1px solid black;
+    border: 0;
 
     font-family: courier-new, courier, monospace;
     font-size: 15px;
@@ -85,10 +85,10 @@ body {
 
     z-index: 1000;
 
-    >li {
-        display: flex;
-        flex-direction: row;
+    display: flex;
+    flex-direction: column;
 
+    >li {
         &:hover {
             background-color: var(--link-color);
             cursor: pointer;
