--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -4,52 +4,59 @@ div.text_editor {
     @include nowrap;
     display: flex;
     flex-direction: column;
-}
 
-div.header {
-    height: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 30px;
-    border: 1px solid var(--color);
-    flex-grow: 0;
-}
-
-div.body {
-    width: 100%;
-    flex-grow: 1;
-    overflow-y: scroll;
-}
-
-div.path-selector {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-
-    >img.icon {
-        @include trz-icon;
-        margin-left: var(--padding);
-        margin-right: var(--padding);
-    }
-
-    div.selector {
-        position: relative;
+    div.header {
+        height: 30px;
         display: flex;
         flex-direction: row;
-        width: 100%;
+        align-items: center;
+        height: 30px;
+        border: 1px solid var(--color);
+        flex-grow: 0;
 
-        input.selector {
-            background-color: var(--background-color);
-            color: var(--color);
-            border: 0;
+        div.path-selector {
+            display: flex;
+            flex-direction: row;
             width: 100%;
+
+            img.path-selector-icon {
+                @include trz-icon;
+                margin-left: var(--padding);
+                margin-right: var(--padding);
+            }
+
+            div.path-selector-widget {
+                position: relative;
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+
+                input.path-selector-field {
+                    background-color: var(--background-color);
+                    color: var(--color);
+                    border: 0;
+                    width: 100%;
+                    @include trz-font;
+                }
+
+                ul.path-selector-autocomplete {
+                    @include trz-menu;
+                    border-left: 1px dotted gray;
+                    border-bottom: 1px dotted gray;
+                }
+            }
+        }
+
+        img.sync-status {
+            @include trz-icon;
+            margin-left: var(--padding);
+            margin-right: var(--padding);
         }
     }
-}
 
-ul.autocomplete {
-    @include trz-menu;
-    border-left: 1px dotted gray;
-    border-bottom: 1px dotted gray;
+    div.body {
+        width: 100%;
+        flex-grow: 1;
+        overflow-y: scroll;
+    }
 }
