--- a/terminal/src/frontend/remotes.scss
+++ b/terminal/src/frontend/remotes.scss
@@ -2,10 +2,12 @@ ul.remotes {
     position: absolute;
     right: 0;
     top: 25px;
+    z-index: 1000;
 
     list-style: none;
     margin: 0;
     padding: 0;
+    --padding: 5px;
 
     border: 1px solid white;
     background-color: var(--background-color);
@@ -17,6 +19,6 @@ ul.remotes {
         }
 
         padding: var(--padding);
-        margin: 1px;
+        margin: 0px;
     }
 }
