--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -10,7 +10,6 @@ div.text_editor {
         display: flex;
         flex-direction: row;
         align-items: center;
-        height: 30px;
         border: 1px solid var(--color);
         flex-grow: 0;
 
@@ -43,6 +42,26 @@ div.text_editor {
                     @include trz-menu;
                     border-left: 1px dotted gray;
                     border-bottom: 1px dotted gray;
+                }
+            }
+        }
+
+        div.remotes {
+            position: relative;
+
+            .current {
+                position: relative;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    background: var(--link-color);
+                    opacity: 0.4;
+                    z-index: -1;
                 }
             }
         }
