--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -75,6 +75,7 @@ div.text_editor {
 
     div.body {
         width: 100%;
+        height: 100%;
         flex-grow: 1;
         overflow-y: scroll;
     }
