--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -1,7 +1,6 @@
 div.text_editor {
     width: 100%;
     height: 100%;
-    @include nowrap;
     display: flex;
     flex-direction: column;
 
@@ -77,6 +76,10 @@ div.text_editor {
         width: 100%;
         height: 100%;
         flex-grow: 1;
-        overflow-y: scroll;
+
+        div.editor {
+            height: 100%;
+            overflow-y: auto;
+        }
     }
 }
