--- a/terminal/src/frontend/menu.scss
+++ b/terminal/src/frontend/menu.scss
@@ -4,7 +4,7 @@ div.menu {
     flex-direction: column;
     align-items: flex-start;
     align-self: center;
-    flex-grow: 0;
+    flex: 0 0 auto;
 
     border: 0;
     margin: 0px;
