--- a/terminal/src/terminal/terminal_tabs.scss
+++ b/terminal/src/terminal/terminal_tabs.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: flex-end;
     align-self: center;
-    flex-grow: 1;
+    flex: 1 1 auto;
 
     border: 0;
     margin: 0px;
