--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -10,7 +10,7 @@ div.text_editor {
         flex-direction: row;
         align-items: center;
         border: 1px solid var(--color);
-        flex-grow: 0;
+        flex: 0 0 auto;
 
         div.path-selector {
             display: flex;
@@ -75,7 +75,7 @@ div.text_editor {
     div.body {
         width: 100%;
         height: 100%;
-        flex-grow: 1;
+        flex: 1 1 auto;
 
         div.editor {
             height: 100%;
