--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -1,7 +1,6 @@
 div.text_editor {
     width: 100%;
     height: 100%;
-    @include nowrap;
     display: flex;
     flex-direction: column;
 
@@ -10,9 +9,8 @@ div.text_editor {
         display: flex;
         flex-direction: row;
         align-items: center;
-        height: 30px;
         border: 1px solid var(--color);
-        flex-grow: 0;
+        flex: 0 0 auto;
 
         div.path-selector {
             display: flex;
@@ -47,6 +45,26 @@ div.text_editor {
             }
         }
 
+        div.remotes {
+            position: relative;
+
+            .current {
+                position: relative;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    background: var(--link-color);
+                    opacity: 0.4;
+                    z-index: -1;
+                }
+            }
+        }
+
         img.sync-status {
             @include trz-icon;
             margin-left: var(--padding);
@@ -56,7 +74,12 @@ div.text_editor {
 
     div.body {
         width: 100%;
-        flex-grow: 1;
-        overflow-y: scroll;
+        height: 100%;
+        flex: 1 1 auto;
+
+        div.editor {
+            height: 100%;
+            overflow-y: auto;
+        }
     }
 }
