--- a/terminal/src/_common.scss
+++ b/terminal/src/_common.scss
@@ -1,13 +1,10 @@
 html,
 body {
     height: 100%;
-    margin: 0px;
-    padding: 0px;
-    border-width: 0px;
-}
-
-html {
-    border-width: 0px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
 }
 
 @mixin trz-font {
