--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -10,6 +10,7 @@ div.text_editor {
         flex-direction: row;
         align-items: center;
         border: 1px solid var(--color);
+        box-sizing: border-box;
         flex: 0 0 auto;
 
         div.path-selector {
@@ -75,11 +76,21 @@ div.text_editor {
     div.body {
         width: 100%;
         height: 100%;
+        min-height: 0;
         flex: 1 1 auto;
 
-        div.editor {
+        display: flex;
+        flex-direction: row;
+
+        div.editor-container {
             height: 100%;
-            overflow-y: auto;
+            min-height: 0;
+            flex: 1 1 auto;
+
+            div.editor {
+                height: 100%;
+                overflow-y: auto;
+            }
         }
     }
 }
