--- a/terminal/src/terminal.scss
+++ b/terminal/src/terminal.scss
@@ -19,11 +19,7 @@
     }
 
     .titles>ul {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        height: 30px;
-
+        @include trz-header;
         overflow-x: scroll;
         overflow-y: hidden;
         @include no-scroll-bar;
