--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -5,10 +5,7 @@ div.text_editor {
     flex-direction: column;
 
     div.header {
-        height: 30px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+        @include trz-header;
         border: 1px solid var(--color);
         box-sizing: border-box;
         flex: 0 0 auto;
@@ -40,6 +37,10 @@ div.text_editor {
 
                 ul.path-selector-autocomplete {
                     @include trz-menu;
+
+                    max-height: calc(100vh - var(--header-height) - 5px);
+                    overflow-y: scroll;
+
                     border-left: 1px dotted gray;
                     border-bottom: 1px dotted gray;
                 }
