server_fn should use Json

--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -49,6 +49,7 @@ div.text_editor {
 
         div.remotes {
             position: relative;
+            padding-right: var(--padding);
 
             .current {
                 position: relative;
