--- a/terminal/src/_common.scss
+++ b/terminal/src/_common.scss
@@ -66,13 +66,15 @@ body {
     user-drag: none;
 }
 
-@mixin trz-icon($size: 15px) {
-    display: block;
+@mixin trz-icon($display: block,
+    $size: 15px,
+    $filter: invert(1)) {
+    display: $display;
     height: $size;
     border: 0;
     margin: 0px;
     padding: 0px;
-    filter: invert(1);
+    filter: $filter;
 }
 
 #main {
