--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -5,11 +5,9 @@ div.text_editor {
     flex-direction: column;
 
     div.header {
-        height: 30px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+        @include trz-header;
         border: 1px solid var(--color);
+        box-sizing: border-box;
         flex: 0 0 auto;
 
         div.path-selector {
@@ -39,6 +37,10 @@ div.text_editor {
 
                 ul.path-selector-autocomplete {
                     @include trz-menu;
+
+                    max-height: calc(100vh - var(--header-height) - 5px);
+                    overflow-y: scroll;
+
                     border-left: 1px dotted gray;
                     border-bottom: 1px dotted gray;
                 }
@@ -47,6 +49,7 @@ div.text_editor {
 
         div.remotes {
             position: relative;
+            padding-right: var(--padding);
 
             .current {
                 position: relative;
@@ -75,11 +78,21 @@ div.text_editor {
     div.body {
         width: 100%;
         height: 100%;
+        min-height: 0;
         flex: 1 1 auto;
 
-        div.editor {
+        display: flex;
+        flex-direction: row;
+
+        div.editor-container {
             height: 100%;
-            overflow-y: auto;
+            min-height: 0;
+            flex: 1 1 auto;
+
+            div.editor {
+                height: 100%;
+                overflow-y: auto;
+            }
         }
     }
 }
