--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -35,6 +35,10 @@ div.text_editor {
                     @include trz-font;
                 }
 
+                span.path-selector-field {
+                    white-space: nowrap;
+                }
+
                 ul.path-selector-autocomplete {
                     @include trz-menu;
 
@@ -50,6 +54,10 @@ div.text_editor {
         div.remotes {
             position: relative;
             padding-right: var(--padding);
+
+            div.show-current {
+                white-space: nowrap;
+            }
 
             .current {
                 position: relative;
