--- a/terminal/src/terminal.scss
+++ b/terminal/src/terminal.scss
@@ -9,8 +9,7 @@
     }
 
     .titles {
-        display: flex;
-        flex-direction: row;
+        @include trz-header;
 
         background-color: var(--background-color);
         border: 1px solid var(--color);
@@ -90,4 +89,8 @@
             height: 100%;
         }
     }
+}
+
+.title-span {
+    white-space: nowrap;
 }
