--- a/terminal/src/frontend/remotes.scss
+++ b/terminal/src/frontend/remotes.scss
@@ -1,4 +1,29 @@
-ul.remotes {
+div.remotes {
+    position: relative;
+    padding-right: var(--padding);
+
+    div.show-current {
+        white-space: nowrap;
+    }
+
+    .current {
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: var(--link-color);
+            opacity: 0.4;
+            z-index: -1;
+        }
+    }
+}
+
+ul.remotes-list {
     position: absolute;
     right: 0;
     top: 25px;
