--- a/terminal/src/frontend/remotes.scss
+++ b/terminal/src/frontend/remotes.scss
@@ -1,6 +1,7 @@
 div.remotes {
     position: relative;
     padding-right: var(--padding);
+    margin-left: auto;
 
     div.show-current {
         white-space: nowrap;
