--- a/terminal/src/frontend/remotes.scss
+++ b/terminal/src/frontend/remotes.scss
@@ -1,25 +1,25 @@
-div.remotes {
-    position: relative;
-    padding-right: var(--padding);
-    margin-left: auto;
+ul.remotes-list {
+    position: absolute;
+    right: 0;
+    top: 25px;
+    z-index: 1000;
 
-    div.show-current {
-        white-space: nowrap;
-    }
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    --padding: 5px;
 
-    .current {
-        position: relative;
+    border: 1px solid white;
+    background-color: var(--background-color);
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: var(--link-color);
-            opacity: 0.4;
-            z-index: -1;
+    li {
+        &:hover {
+            background-color: var(--link-color);
+            cursor: pointer;
         }
+
+        padding: var(--padding);
+        margin: 0px;
+        white-space: nowrap;
     }
 }
