--- a/terminal/src/converter/converter.scss
+++ b/terminal/src/converter/converter.scss
@@ -26,11 +26,13 @@
 
     textarea,
     pre {
+        flex: 0 0 50%;
         width: 100%;
         height: 100%;
         box-sizing: border-box;
         padding: 0;
         margin: 0;
+        overflow-x: scroll;
 
         @include trz-font;
 
