--- a/terminal/src/converter/converter.scss
+++ b/terminal/src/converter/converter.scss
@@ -50,8 +50,13 @@
         padding: var(--padding);
     }
 
-    textarea {
-        border-right: 1px solid white;
+    textarea,
+    textarea:focus {
+        border: none;
+        outline: none;
+        resize: none;
+        box-shadow: none;
+        border-right: 1px solid var(--color);
     }
 }
 
@@ -70,6 +75,8 @@
 
         background-color: var(--background-color);
         border: 1px solid var(--color);
+        border-left: none;
+        border-top: none;
 
         @include prevent-user-select;
     }
