--- a/terminal/src/portforward/port_forward.scss
+++ b/terminal/src/portforward/port_forward.scss
@@ -42,6 +42,13 @@
             .from {}
 
             .to {}
+
+            .status {
+                margin: var(--half-padding);
+                margin-left: auto;
+                filter: invert(1);
+                margin-bottom: auto;
+            }
         }
     }
 
