--- a/terminal/src/portforward/port_forward.scss
+++ b/terminal/src/portforward/port_forward.scss
@@ -26,27 +26,42 @@
     flex-direction: column;
     overflow-y: scroll;
 
-    .port-forward {
+    .port-forward,
+    .add {
         border: 1px solid var(--color);
         border-radius: var(--padding);
         margin-top: var(--padding);
         padding: var(--half-padding);
+    }
 
-        &:last-child {
-            border-bottom: 0;
-        }
-
+    .port-forward {
         .title {
             margin: var(--half-padding);
             display: flex;
             align-items: center;
 
-            .status {
+            img.status {
                 --size: 24px;
+                margin-left: auto;
+                padding-right: var(--half-padding);
+                margin: var(--half-padding);
+                margin-left: 0;
+            }
+
+            img.delete {
+                --size: 20px;
+                margin: var(--half-padding);
+                margin-left: auto;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+
+            img.status,
+            img.delete {
                 width: var(--size);
                 height: var(--size);
-                margin: var(--half-padding);
-                padding-right: var(--half-padding);
             }
         }
 
@@ -136,6 +151,20 @@
                 -moz-appearance: none;
                 font: inherit;
             }
+        }
+    }
+
+    .add {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+
+        img {
+            --size: 24px;
+            width: var(--size);
+            height: var(--size);
+            margin: var(--half-padding);
+            padding-right: var(--half-padding);
         }
     }
 }
