Error report works but count is not accurate

--- a/terminal/src/portforward/port_forward.scss
+++ b/terminal/src/portforward/port_forward.scss
@@ -82,6 +82,10 @@
                 margin-left: var(--half-padding);
             }
         }
+
+        .port-forward-status {
+            margin: var(--half-padding);
+        }
     }
 
     .host-port-definition {
