--- a/terminal/src/portforward/port_forward.scss
+++ b/terminal/src/portforward/port_forward.scss
@@ -44,17 +44,20 @@
                 --size: 24px;
                 margin-left: auto;
                 padding-right: var(--half-padding);
-                margin: var(--half-padding);
-                margin-left: 0;
+                margin: 0;
             }
 
             img.delete {
                 --size: 20px;
-                margin: var(--half-padding);
+                margin: 0;
                 margin-left: auto;
+                padding: var(--half-padding);
+                position: relative;
+                right: calc(-1 * var(--half-padding));
+                cursor: pointer;
 
                 &:hover {
-                    cursor: pointer;
+                    background-color: var(--color);
                 }
             }
 
@@ -78,6 +81,10 @@
                 flex: 1 1 0;
                 margin-left: var(--half-padding);
             }
+        }
+
+        .port-forward-status {
+            margin: var(--half-padding);
         }
     }
 
@@ -163,8 +170,19 @@
             --size: 24px;
             width: var(--size);
             height: var(--size);
-            margin: var(--half-padding);
-            padding-right: var(--half-padding);
+            margin: 0;
+            padding: var(--half-padding);
+
+        }
+
+        &:hover {
+            div {
+                background-color: var(--color);
+
+                img {
+                    filter: invert(1);
+                }
+            }
         }
     }
 }
