--- a/terminal/src/portforward/port_forward.scss
+++ b/terminal/src/portforward/port_forward.scss
@@ -85,6 +85,11 @@
 
         .port-forward-status {
             margin: var(--half-padding);
+            margin-top: var(--padding);
+        }
+
+        .active-checkbox {
+            margin: var(--half-padding);
         }
     }
 
