--- a/terminal/src/portforward/port_forward.scss
+++ b/terminal/src/portforward/port_forward.scss
@@ -66,6 +66,14 @@
                 width: var(--size);
                 height: var(--size);
             }
+
+            span.tag {
+                background-color: rgba(255, 255, 255, 0.2);
+                padding: 3px;
+                border: 1px solid var(--color);
+                border-radius: 7px;
+                text-transform: uppercase;
+            }
         }
 
         .port-forward-body {
@@ -84,6 +92,11 @@
         }
 
         .port-forward-status {
+            margin: var(--half-padding);
+            margin-top: var(--padding);
+        }
+
+        .active-checkbox {
             margin: var(--half-padding);
         }
     }
