--- a/terminal/src/converter/converter.scss
+++ b/terminal/src/converter/converter.scss
@@ -30,8 +30,7 @@
     display: flex;
     flex-direction: row;
 
-    textarea,
-    pre {
+    textarea {
         flex: 0 0 50%;
         width: 100%;
         height: 100%;
