--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -33,6 +33,7 @@ div.text_editor {
                     border: 0;
                     width: 100%;
                     @include trz-font;
+                    @include trz-no-outline;
                 }
 
                 span.path-selector-field {
