--- a/terminal/src/_common.scss
+++ b/terminal/src/_common.scss
@@ -116,3 +116,11 @@ body {
     --header-height: 30px;
     height: var(--header-height);
 }
+
+@mixin trz-no-outline {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    box-shadow: none;
+    outline: none;
+}
