--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -13,6 +13,7 @@ div.text_editor {
         div.path-selector {
             display: flex;
             flex-direction: row;
+            align-items: center;
             width: 100%;
 
             img.path-selector-icon {
