--- a/terminal/src/text_editor/text_editor.scss
+++ b/terminal/src/text_editor/text_editor.scss
@@ -20,6 +20,13 @@ div.text_editor {
                 @include trz-icon;
                 margin-left: var(--padding);
                 margin-right: var(--padding);
+                padding: 3px;
+
+                &.search-icon:hover {
+                    filter: invert(0);
+                    background-color: var(--link-color);
+                    cursor: pointer;
+                }
             }
 
             div.path-selector-widget {
